token was hardcoded for the sake of testing. Paginator is fixed. It no longer expands out of the screen.

--- a/src/app/feature/pages/dashboard/dashboard.component.scss
+++ b/src/app/feature/pages/dashboard/dashboard.component.scss
@@ -285,7 +285,7 @@ table {
   border: 1px solid $ddx-light;
   box-sizing: border-box;
   border-radius: 5px;
-  margin: 20px auto;
+  margin: 10px auto 40px auto;
   width: 80%;
 }
 
